--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -32,7 +32,7 @@ on:
 env:
   AWS_REGION: ap-south-1                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: notification-api           # set this to your Amazon ECR repository name
-  ECS_SERVICE: notification-api                 # set this to your Amazon ECS service name
+  ECS_SERVICE: notification                 # set this to your Amazon ECS service name
   ECS_CLUSTER: democluster                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: demo-ecs-taskdefinition # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
