--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -34,7 +34,7 @@ env:
   ECR_REPOSITORY: notification-api           # set this to your Amazon ECR repository name
   ECS_SERVICE: notification                 # set this to your Amazon ECS service name
   ECS_CLUSTER: democluster                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: demo-ecs-taskdefinition # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: ecs-task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: notification           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
@@ -80,7 +80,7 @@ jobs:
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
-        task-definition: ecs-task-definition.json
+        task-definition: ${{ env.ECS_TASK_DEFINITION }}
         container-name: ${{ env.CONTAINER_NAME }}
         image: ${{ steps.build-image.outputs.image }}
 
